kube-apps/owncloud/owncloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: owncloud-ingress
 annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - owncloud.dentropydaemon.net
    secretName: owncloud-cert-tls
  rules:
    - host: owncloud.dentropydaemon.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: owncloud
                port: 
                  number: 8080
